# account-validation-starter

./: .gitignore  Anchor.toml  README.md  package.json
programs/account-validation/: Cargo.toml
programs/account-validation/src/: lib.rs
tests/: account-validation.ts
