[package]
name = "account-validation"
version = "0.1.0"
description = "Account Validation & Rent Safety Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "account_validation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
